[package]
name = "llmperf-rs"
version = "0.1.0"
edition = "2021"
description = "LLM API performance testing CLI tool"
license = "MIT"

[[bin]]
name = "llmperf-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
futures-util = "0.3"
tiktoken-rs = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.32"
ctrlc = "3.2"
rand = "0.8"
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = true
